@@ -32,7 +32,8 @@ Lua API changes:
 * Add new Lara functions: GetTarget and GetVehicle.
 * Remove Lara functions: SetOnFire and GetOnFire (replaced with GetEffect and SetEffect).
 * Add Flow.EnableMassPickup option in Gameflow.lua to enable/disable mass pickups.
-* Add level secrets property to display level-specific secret count.
+* Add Flow.EnableLaraInTitle option in Gameflow.lua to enable/disable Lara in title flyby.
+* Add level.secrets property to display level-specific secret count.
 * Fix action key script functions not fully working in some cases.
 * Fix mounted vehicles ignoring Disable, Shatter and Explode script commands.
 
